# data-labeller

./: .env.example  .git-commit-message-fix.txt  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONCURRENCY_40_ANALYSIS.md  CONTRIBUTING.md  FINAL_STATUS.md  HIERARCHICAL_LABELS_DONE.md  README.md  RETRIEVAL_FIX.md  RETRIEVAL_QUERY_IMPROVEMENT.md  SUGGEST_LABELS_FIXED.md  TOKEN_CALCULATION.md  create_claim_schema.json  delete_all_docs.py  docker-compose.yml  inspect_eval.py  pre-commit-output.txt  reprocess_documents.ps1  test_auto_labels.json  test_auto_labels2.json  test_compound_labels.json  test_document.txt  test_final.json  todo.md
backend/: .dockerignore  Dockerfile  README.md  manage.py  pyproject.toml  settings.yml
backend/data/: django.db
backend/data/chroma/: chroma.sqlite3
backend/sample_docs/: DOWNLOAD_INSTRUCTIONS.md  README.md  download_datasets.py  download_sroie.py  generate_samples.py
backend/scripts/: backfill_neo4j_graph.py  generate_endpoint_inventory.py  migrate_evaluation_tables.py  smoke_frontend_flows.sh
backend/src/uu_backend/: __init__.py  asgi_dispatcher.py  config.py
backend/src/uu_backend/api/: __init__.py  main.py
backend/src/uu_backend/api/routes/: annotations.py  deployments.py  documents.py  evaluation.py  graph.py  health.py  ingest.py  providers.py  search.py  suggestions.py  taxonomy.py  timeline.py  tutorial.py
backend/src/uu_backend/database/: __init__.py  neo4j_client.py  sqlite_client.py  vector_store.py
backend/src/uu_backend/django_api/: __init__.py  apps.py  fastapi_proxy.py  urls.py
backend/src/uu_backend/django_api/annotations/: __init__.py  urls.py  views.py
backend/src/uu_backend/django_api/deployments/: __init__.py  urls.py  views.py
backend/src/uu_backend/django_api/documents/: __init__.py  test_azure_di.py  urls.py  views.py
backend/src/uu_backend/django_api/evaluation/: __init__.py  urls.py  views.py
backend/src/uu_backend/django_api/graph/: __init__.py  urls.py  views.py
backend/src/uu_backend/django_api/health/: __init__.py  urls.py  views.py
backend/src/uu_backend/django_api/ingest/: __init__.py  urls.py  views.py
backend/src/uu_backend/django_api/projects/: __init__.py  urls.py  views.py
backend/src/uu_backend/django_api/providers/: __init__.py  urls.py  views.py
backend/src/uu_backend/django_data/: __init__.py  apps.py  models.py
backend/src/uu_backend/django_project/: __init__.py  api_router.py  asgi.py  celery_app.py  urls.py
backend/src/uu_backend/extraction/: entities.py  relationships.py
backend/src/uu_backend/ingestion/: chunker.py  converter.py  dates.py
backend/src/uu_backend/llm/: __init__.py  openai_client.py  options.py  prompts.py
backend/src/uu_backend/migration/: __init__.py  routing.py
backend/src/uu_backend/models/: __init__.py  annotation.py  deployment.py  document.py  entity.py  evaluation.py  feedback.py  label_suggestion.py  project.py  prompt.py  suggestion.py  taxonomy.py  timeline.py
backend/src/uu_backend/repositories/: __init__.py  base.py  django_repo.py  document_repository.py  factory.py  sqlite_repo.py
backend/src/uu_backend/services/: annotation_suggestion_service.py  azure_di_service.py  classification_service.py  evaluation_service.py  extraction_service.py  graph_ingestion_service.py  label_suggestion_service.py  ml_service.py  prompt_generator.py  qa_service.py  schema_based_suggestion_service.py  schema_generator.py  suggestion_service.py  value_matcher.py
backend/src/uu_backend/tasks/: __init__.py  azure_di_tasks.py  contextual_retrieval_tasks.py  evaluation_tasks.py  extraction_tasks.py  neo4j_tasks.py
backend/tests/: conftest.py  run_integration_test.sh  test_annotation_suggestion_service.py  test_benchmark_evaluation.py  test_entity_extraction_fallback.py  test_evaluation.py  test_evaluation_service.py  test_graph_relationships.py  test_layout_extraction.py  test_mandatory_contextual_retrieval.py  test_neo4j_client_graph_data.py  test_neo4j_tasks.py  test_pdf_intelligent_retrieval.py  test_pdf_tables.py  test_pdf_tables_v2.py  test_qa_service.py  test_schema_and_extraction_services.py
backend/tests/contract/: health_contract.json  test_health_contract.py
backend/tests/migration/: endpoint_inventory.json  test_dispatcher_routing.py  test_endpoint_inventory.py  test_phase3_repository_adoption.py
(+253 files in other folders)
