[project]
name = "uu-backend"
version = "0.1.0"
description = "Unstructured Unlocked - Document intelligence backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]>=0.32.0",
    "django>=5.0,<6.0",
    "djangorestframework>=3.15.0",
    "drf-spectacular>=0.27.0",
    "django-cors-headers>=4.4.0",
    "django-environ>=0.11.0",
    "psycopg[binary]>=3.2.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "markitdown[all]>=0.1.0",
    "chromadb>=0.5.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dateutil>=2.9.0",
    "regex>=2024.0.0",
    "neo4j>=5.0.0",
    "openai>=1.0.0",
    "tiktoken>=0.8.0",
    "pdfplumber>=0.11.0",
    "lightgbm>=4.0.0",
    "sentence-transformers>=2.2.0",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "reportlab>=4.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uu_backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
