[project]
name = "uu-backend"
version = "0.1.0"
description = "Unstructured Unlocked - Document intelligence backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]>=0.32.0",
    "django>=5.0,<6.0",
    "djangorestframework>=3.15.0",
    "drf-spectacular>=0.27.0",
    "django-cors-headers>=4.4.0",
    "django-environ>=0.11.0",
    "psycopg[binary]>=3.2.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "markitdown[all]>=0.1.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dateutil>=2.9.0",
    "regex>=2024.0.0",
    "celery[redis]>=5.4.0",
    "openai>=1.0.0",
    "pdfplumber>=0.11.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "azure-ai-formrecognizer>=3.3.0",
    "lightgbm>=4.0.0",
    "joblib>=1.3.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
    "reportlab>=4.0.0",
    "pyyaml>=6.0.0",
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.1",
    "langchain-text-splitters>=0.2.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.0",
    "nest-asyncio>=1.6.0",
    "tenacity>=8.2.0",
    "cohere>=5.20.6",
    "pypdf>=6.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uu_backend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
